fix:  “公司缩写”，“产品类型”和“产品架构”位置分布要平均些;匹配产品的数字，需以橙色显示

--- a/app.wxss
+++ b/app.wxss
@@ -205,6 +205,9 @@ page {
   color:#333;
   float: left;
 }
+.pro-duty-bb text {
+  color: #ff7800;
+}
 .pro-detial-mess-row .pro-duty-bb.cost {
   width:400rpx;
 }
@@ -356,6 +359,7 @@ page {
 .product-item-con .span-item {
   padding-right: 20rpx;
   float: left;
+  margin-right: 90rpx;
 }
 .product-item-con .type, .product-item-con .type.type-aa {
   text-align: center;
