--- a/pages/product-list/product-list.wxml
+++ b/pages/product-list/product-list.wxml
@@ -2,7 +2,7 @@
 <view>
     <view class="part-white pro-detial-mess-row border-bottomf568 posi-fixed-top">
         <view class="padd-lr-30">
-        <view class="pro-duty-bb">共有{{total_product_count}}个匹配产品</view>
+        <view class="pro-duty-bb">共有<text>{{total_product_count}}</text>个匹配产品</view>
         <view class="pro-duty-cc blue" bindtap="toScreen" wx:if="{{!type}}">产品筛选</view>
         <view class="clear"></view>
         </view>
