--- a/app.wxss
+++ b/app.wxss
@@ -135,6 +135,18 @@ page {
   float: left;
   color: #999999;
 }
+.proli-item-toggle {
+  margin: 0 42rpx;
+  float: right;
+  width:12rpx;
+  height:100%;
+  transform: rotate(270deg);
+  background: url(https://resource.wenme.cc/static/images/gopage-icon-blue.png) no-repeat right center;
+  background-size: 12rpx 20rpx;
+}
+.proli-item-toggle.off {
+  transform: rotate(90deg);
+}
 .proli-item-right {
   margin: 0 30rpx;
   float: right;
