--- a/app.wxss
+++ b/app.wxss
@@ -165,7 +165,7 @@ page {
   line-height: 46rpx;
   border-top:1px solid #e9e9e9;
   position: relative;
-  font-size: 30rpx;
+  font-size: 32rpx;
 }
 .pro-detial-mess-row:first-child {
   border-top:none;
@@ -179,7 +179,7 @@ page {
   overflow: hidden;
 }
 .pro-detial-mess-row .messcon {
-  width: 350rpx;
+  min-width: 350rpx;
   min-height: 46rpx;
   float: left;
   overflow: hidden;
