--- a/pages/disease-insurance/disease-insurance.wxml
+++ b/pages/disease-insurance/disease-insurance.wxml
@@ -42,13 +42,15 @@
     <view class="pro-detial-mess">
         <view class="pro-detial-mess-tit">
             <view class="proli-item">特定重大疾病 列表与定义</view>
-            <view class="proli-item-right">{{desease_count}}种</view>
+            <view class="proli-item-toggle{{showDisease ? '': ' off'}}"></view>
+            <view class="proli-item-right" bindtap="toggleDisease">{{desease_count}}种</view>
         </view>
 
-        <view class="padd-lr-30">
+        <view class="padd-lr-30" wx:if="{{showDisease}}">
 
             <view wx:for="{{desease_list}}" class="pro-detial-mess-row">
                 <view class="pro-duty-bb">{{item[0]}}</view>
+                <view class="pro-duty-cc"></view>
             </view>
 
             <view class="clear"></view>
