fix: 疾病列表需要有折叠效果，每种疾病的最右面要有箭头

--- a/pages/disease-insurance/disease-insurance.wxml
+++ b/pages/disease-insurance/disease-insurance.wxml
@@ -42,8 +42,8 @@
     <view class="pro-detial-mess">
         <view class="pro-detial-mess-tit">
             <view class="proli-item">特定重大疾病 列表与定义</view>
-            <view class="proli-item-toggle{{showDisease ? '': ' off'}}"></view>
-            <view class="proli-item-right" bindtap="toggleDisease">{{desease_count}}种</view>
+            <view class="proli-item-toggle{{showDisease ? '': ' off'}}" bindtap="toggleDisease"></view>
+            <view class="proli-item-right">{{desease_count}}种</view>
         </view>
 
         <view class="padd-lr-30" wx:if="{{showDisease}}">
