fix: 保险金对应的申请资料，不再以列表的形式出现，直接显示原文。最后没有等待期与疾病列表

--- a/app.wxss
+++ b/app.wxss
@@ -43,6 +43,9 @@ page {
   padding-left:30rpx;
   padding-right:30rpx;
 }
+.padd-lr-30 > text {
+  line-height: 1.5;
+}
 .mess-iconaa {
   width: 32rpx;
   height: 32rpx;
