fix: 由”我的产品评级“进入产品列表，不需要”产品筛选“连接。

--- a/pages/product-list/product-list.wxml
+++ b/pages/product-list/product-list.wxml
@@ -3,7 +3,7 @@
     <view class="part-white pro-detial-mess-row border-bottomf568 posi-fixed-top">
         <view class="padd-lr-30">
         <view class="pro-duty-bb">共有<text>{{total_product_count}}</text>个匹配产品</view>
-        <view class="pro-duty-cc blue" bindtap="toScreen" wx:if="{{!type}}">产品筛选</view>
+        <view class="pro-duty-cc blue" bindtap="toScreen" wx:if="{{!type && type !== 'purchased'}}">产品筛选</view>
         <view class="clear"></view>
         </view>
     </view>
