--- a/pages/apply-info/apply-info.wxml
+++ b/pages/apply-info/apply-info.wxml
@@ -1,29 +1,29 @@
 <!--pages/prograde-baoxianzeren/disease-insurance.wxml-->
 <view class="padding-bottom">
-<view class="pro-company-name posi-fixed-top">
-    <view class="productname padd-lr-30" >
-        {{product}}
-        <view class="company-info-row posi-rela">
-            <view class="gradecon">
-                <view wx:if="{{rating_star === '未有评级'}}" class="no-grade">{{rating_star}}</view>
-                <image wx:else src="{{rating_star}}"></image>
+    <view class="pro-company-name padd-lr-30">
+        <view class="product-item">
+            <view class="product-item-tit">{{product}}</view>
+            <view class="company-info-row posi-rela">
+                <view class="gradecon">
+                    <view wx:if="{{rating_star === '未有评级'}}" class="no-grade">{{rating_star}}</view>
+                    <image wx:else src="{{rating_star}}"></image>
+                </view>
+                <view class="insured_cover gradecon" wx:if="{{insured_cover_icon.length}}">
+                    保障
+                    <image wx:for="{{insured_cover_icon}}" src="{{item}}"></image>
+                </view>
             </view>
-            <view class="insured_cover gradecon" wx:if="{{insured_cover_icon.length}}">
-                保障
-                <image wx:for="{{insured_cover_icon}}" src="{{item}}"></image>
+            <view class="product-item-con">
+                <view class="type">{{product_structure}}</view>
+                <view class="span-item">{{insurer}}</view>
+                <view class="span-item">{{product_class}}</view>
+                <view class="clear"></view>
             </view>
-        </view>
-        <view class="product-item-con">
-            <view class="type">{{product_structure}}</view>
-            <view class="span-item">{{insurer}}</view>
-            <view class="span-item">{{product_class}}</view>
-            <view class="clear"></view>
         </view>
     </view>
-</view>
     
 
-    <view class="pro-detial-mess{{index ? '' : ' first'}}" wx:for="{{docs_list}}">
+    <view class="pro-detial-mess" wx:for="{{docs_list}}">
         <view class="pro-detial-mess-tit">
             <view class="proli-item">{{item[0]}}</view>
         </view>
