--- a/pages/product-detail/product-detail.wxml
+++ b/pages/product-detail/product-detail.wxml
@@ -2,9 +2,9 @@
 <view>
 	
 	<view class="part-one">
-		<view class="pro-company-name">
-            <view class="productname padd-lr-30" >
-                {{product}}
+		<view class="pro-company-name padd-lr-30">
+            <view class="product-item">
+                <view class="product-item-tit">{{product}}</view>
                 <view class="company-info-row posi-rela">
                     <view class="gradecon">
                         <view wx:if="{{rating_star === '未有评级'}}" class="no-grade">{{rating_star}}</view>
