--- a/pages/product-detail/product-detail.wxss
+++ b/pages/product-detail/product-detail.wxss
@@ -34,10 +34,10 @@ page {
 }
 
 .company-info-row {
-  min-height:30rpx;
-  line-height:30rpx;
-  font-size: 24rpx;
-  padding: 10rpx 0;
+  min-height:54rpx;
+  line-height:54rpx;
+  font-size:34rpx;
+  padding:17rpx 0rpx;
 }
 
 .company-info-row .gradecon {
@@ -49,22 +49,14 @@ page {
 .company-info-row .gradecon.insured_cover {
   float: right;
   width: auto;
-  font-size:24rpx;
+  font-size:28rpx;
   color:#aaaaaa;
 }
 .company-info-row .gradecon.insured_cover image {
-  width: 24rpx;
+  width: 28rpx;
   margin: 0 4rpx;
 }
 .company-info-row .gradecon image {
-  width:162rpx;
-  height:24rpx;
-}
-.company-info-row .gradecon .no-grade {
-  font-size:24rpx;
-}
-
-.product-item-con {
-  font-size: 24rpx;
-  line-height: 30rpx;
+  width:189rpx;
+  height:28rpx;
 }
